centralize java tests and simplify